--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,22 +20,21 @@ html, body {
 
 header {
 	width: 100%;
+	height: 70px;
 }
 
 .banner {
-	width: 100%; 
+	position: absolute;
 	height: 50px;
 	float: left;
 	padding: 10px;
 }
 
-.search_bar  {
+#search_bar  {
 	float: right;
-	position: absolute;
-	top: 25px;
-	left: 1070px;
 	display: block;
 	width: 90px;
+	margin: 20px 15px 0;
 }
 
 /* --- Navigation bar --- */
